--- a/nbs/1-image-dataset-zip-file.ipynb
+++ b/nbs/1-image-dataset-zip-file.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pathlib\n",
-    "import mimetypes"
+    "import mimetypes\n",
+    "import shutil\n",
+    "import tempfile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +23,7 @@
        "WindowsPath('D:/Python Projects/AI-Photo_Generator/data/outputs')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,13 +100,55 @@
        " WindowsPath('D:/Python Projects/AI-Photo_Generator/data/inputs/9.jpg')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "image_file_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OUTPUTS_DIR.mkdir(exist_ok=True, parents=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_outpath = OUTPUTS_DIR / \"images.zip\"\n",
+    "zip_outpath.exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "    for path in image_file_paths:\n",
+    "        shutil.copy(path, temp_dir) \n",
+    "    shutil.make_archive(zip_outpath.with_suffix(\"\"), \"zip\", temp_dir)"
    ]
   }
  ],
